--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,109 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+    * {
+        padding: 0;
+        margin: 0;
+        border: 0;
+        box-sizing: border-box;
+        font-family: 'Manrope';
+        color: #0E0E2C;
+    }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+    *, *:before, *:after {
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+    :focus, :active {
+        outline: none;
+    }
+
+    a:focus, a:active {
+        outline: none;
+    }
+
+    nav, footer, header, aside {
+        display: block;
+    }
+
+    html, body {
+        height: 100%;
+        width: 100%;
+        font-size: 100%;
+        line-height: 1;
+        -ms-text-size-adjust: 100%;
+        -moz-text-size-adjust: 100%;
+        -webkit-text-size-adjust: 100%;
+    }
+
+    input, button, textarea {
+        font-family: inherit;
+    }
+
+    input::-ms-clear {
+        display: none;
+    }
+
+    button {
+        cursor: pointer;
+    }
+
+    button::-moz-focus-inner {
+        padding: 0;
+        border: 0;
+    }
+
+    a, a:visited {
+        text-decoration: none;
+    }
+
+    a:hover {
+        text-decoration: none;
+    }
+
+    ul li {
+        list-style: none;
+        list-style-type: none;
+        display: block;
+        padding: 0;
+        margin: 0;
+    }
+
+    img {
+        vertical-align: top;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        font-size: inherit;
+        font-weight: 400;
+    }
+
+
+
+
+    a {
+        text-decoration: none;
+    }
+
+    .container {
+        max-width: 1130px;
+        margin: 0 auto;
+        padding: 0 10px;
+    }
+
+
+    button {
+        background: #1DA7B4;
+        border-radius: 4px;
+        width: 257px;
+        height: 57px;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 140%;
+        color: #FFFFFF
+    }
+
+    h2 {
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 140%;
+    }
