--- a/src/components/Pages/Home/components/Hero.module.scss
+++ b/src/components/Pages/Home/components/Hero.module.scss
@@ -1,5 +1,6 @@
 .container {
     max-width: 1140px;
+    height: max-content;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -20,7 +21,7 @@
 .background {
     position: absolute;
     right: 0;
-    z-index: -1;
+    z-index: -2;
     bottom: 0;
 
     @media screen and (max-width:768px) {
@@ -28,9 +29,6 @@
     }
 }
 
-.content {}
-
-.col {}
 
 
 .hello {
@@ -43,6 +41,7 @@
     @media screen and (max-width:768px) {
         font-size: 18px;
         line-height: 18px;
+        margin-bottom: 16px;
     }
 }
 
@@ -55,6 +54,7 @@
     @media screen and (max-width:768px) {
         font-size: 24px;
         line-height: 30px;
+        margin-bottom: 16px;
     }
 }
 
@@ -68,24 +68,10 @@
     @media screen and (max-width:768px) {
         font-size: 16px;
         line-height: 20px;
+        margin-bottom: 32px;
     }
 
 
-}
-
-.boxImg {
-    display: flex;
-
-    @media screen and (max-width:768px) {
-        grid-row-start: 1;
-    }
-}
-
-.img {
-    display: block;
-    margin: auto;
-    width: 80%;
-    height: auto;
 }
 
 .box {
@@ -96,6 +82,16 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: 24px;
+    }
+}
+
+.vectorArc {
+    position: absolute;
+    top: 150px;
+    left: -110px;
+    @media screen and (max-width:1350px) {
+        display: none;
     }
 }
 
@@ -104,6 +100,13 @@
     gap: 13px;
     align-items: center;
     justify-content: center;
+
+    @media screen and (max-width:768px) {
+        width: 100%;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 18px;
+    }
 }
 
 .linkBtn_xl,
@@ -125,8 +128,10 @@
 
 .linkBtn_m {
     display: none;
+
     @media screen and (max-width:768px) {
         display: flex;
+        line-height: 18px;
     }
 }
 
@@ -148,8 +153,4 @@
         background-position: 0 89%;
         background-size: 100% 2px;
     }
-}
-
-@media screen and (max-width:768px) {
-
 }
