--- a/src/index.css
+++ b/src/index.css
@@ -107,3 +107,13 @@
         font-size: 24px;
         line-height: 140%;
     }
+
+    @media screen and (max-width:768px) {
+        h2 {
+            font-weight: 800;
+            font-size: 16px;
+            line-height: 22px;
+            color: #F8A90D;
+
+        }
+    }
