--- a/src/components/Pages/About/components/Base/Base.module.scss
+++ b/src/components/Pages/About/components/Base/Base.module.scss
@@ -1,6 +1,9 @@
 .base {
-    margin-left: 346px;
-    margin-right: 262px;
+    max-width:  730px;
+    
+    margin: 0 auto; // пример резиновой верстки
+    // margin-left: 346px;
+    // margin-right: 262px;
     margin-bottom: 48px;
 
     
@@ -14,4 +17,49 @@
 
     text-align: center;
     color: rgba(14, 14, 44, 0.6);
+}
+
+.btn {
+    display: flex;
+    gap: 13px;
+    align-items: center;
+    justify-content: center;
+    padding: 16px 24px;
+
+
+
+background: #1DA7B4;
+border-radius: 4px;
+
+font-family: 'Manrope';
+font-style: normal;
+font-weight: 600;
+font-size: 18px;
+line-height: 140%;
+/* or 25px */
+
+
+/* Background/white */
+
+color: #FFFFFF;
+}
+.linkBtn_m {
+    display: flex;
+    align-items: center;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 140%;
+    gap: 13px;
+    padding: 8px;
+}
+.box {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+}
+
+@media screen and (max-width: 768px) { //пример адаптивности
+    // .base {
+    //     display: none;
+    // } 
 }
