--- a/src/components/Pages/About/components/Reviews/Reviews.module.scss
+++ b/src/components/Pages/About/components/Reviews/Reviews.module.scss
@@ -1,35 +1,39 @@
 .slider {
     margin-top: 180px;
-    padding-bottom: 200px;
+    // padding-bottom: 200px;
     max-height: 700px;
     margin-bottom: 200px;
 }
 
+.reviews {
+    background-color: #F6F6F7;
+}
+
 .slider__container {
-
     margin: 0 auto;
-    height: 604px;
-    max-width: 1082px;
-    position: relative;
-    border-radius: 0.5rem;
-    overflow: hidden;
-    margin-top: 4rem;
+    
+    // height: 604px;
+    // max-width: 1082px;
+    // position: relative;
+    // border-radius: 0.5rem;
+    // overflow: hidden;
+    // margin-top: 4rem;
 }
 
-.slide {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.1);
-    display: flex;
-    place-items: start;
-    transition: all 0.25s ease-in-out;
+// .slide {
+//     position: absolute;
+//     width: 100%;
+//     height: 100%;
+//     background-color: rgba(255, 255, 255, 0.1);
+//     display: flex;
+//     place-items: start;
+//     transition: all 0.25s ease-in-out;
 
-}
+// }
 
-.slide h1 {
-    font-size: 5rem;
-}
+// .slide h1 {
+//     font-size: 5rem;
+// }
 
 .btn__container {
     display: flex;
@@ -37,42 +41,42 @@
     margin-top: 0.75rem;
 }
 
-.prev__btn {
-    border-radius: 50%;
-    background-image: url('../../../../img/content/AboutPage/Group10.svg');
-    width: 48px;
-    height: 48px;
-    font-size: 0px;
-}
+// .prev__btn {
+//     border-radius: 50%;
+//     background-image: url('../../../../img/content/AboutPage/Group10.svg');
+//     width: 48px;
+//     height: 48px;
+//     font-size: 0px;
+// }
 
-.next__btn {
-    border-radius: 50%;
-    background-image: url('../../../../img/content/AboutPage/Group9.svg');
-    width: 48px;
-    height: 48px;
-    font-size: 0px;
-}
+// .next__btn {
+//     border-radius: 50%;
+//     background-image: url('../../../../img/content/AboutPage/Group9.svg');
+//     width: 48px;
+//     height: 48px;
+//     font-size: 0px;
+// }
 
-.prev__btn,
-.next__btn {
-    position: relative;
-    margin: 295px 25px 20px 25px
-}
+// .prev__btn,
+// .next__btn {
+//     position: relative;
+//     margin: 295px 25px 20px 25px
+// }
 
-.prev__btn:hover,
-.next__btn:hover {
-    color: #ccc;
-}
+// .prev__btn:hover,
+// .next__btn:hover {
+//     color: #ccc;
+// }
 
-.slide {
-    display: flex;
-    flex-direction: row;
-    padding-left: 50px;
-}
+// .slide {
+//     display: flex;
+//     flex-direction: row;
+//     padding-left: 50px;
+// }
 
-.slider {
-    background-color: #F6F6F7;
-}
+// .slider {
+//     background-color: #F6F6F7;
+// }
 
 .title__slide {
     padding-top: 59px;
@@ -190,4 +194,179 @@
     color: rgba(14, 14, 44, 0.8);
     width: 100%;
     max-width: 265px;
+}
+
+
+
+.team {
+    padding: 24px 0 0;
+    position: relative;
+
+    &__title {
+        color: rgba(61, 167, 180, 1);
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 171.5%;
+    }
+
+
+    &__background {
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        right: 0;
+
+        @media screen and (max-width: 960px) {
+            display: none;
+        }
+    }
+
+
+    &__subtitle {
+        font-weight: 800;
+        font-size: 34px;
+        line-height: 140%;
+    }
+
+    &__wrapper {
+        // width: 95%;
+        display: grid;
+        grid-template-columns: minmax(300px, 47.5%) minmax(250px, 350px);
+        gap: max(135px);
+
+    }
+
+    &__wrapper_btns {
+        align-self: flex-end;
+        display: flex;
+        gap: 48px;
+        height: 48px;
+    }
+
+    &__col {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    &__discription {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 140%;
+        color: rgba(14, 14, 44, 0.6);
+    }
+
+    &__slider {
+        overflow: hidden;
+    }
+
+
+
+    @media screen and (max-width:768px) {
+        padding: 24px 0 64px;
+
+        &__wrapper {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 15px;
+        }
+
+        &__col {
+            align-items: center;
+        }
+
+        &__title {
+            font-size: 16px;
+            line-height: 22px;
+            color: #F8A90D;
+            width: 100%;
+            text-align: left;
+        }
+
+        &__subtitle {
+            font-weight: 800;
+            font-size: 18px;
+            line-height: 22px;
+        }
+
+
+        &__discription {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 20px;
+        }
+
+        &__wrapper_btns {
+            align-self: center;
+        }
+    }
+}
+
+
+.teamCard {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: minmax(250px, 350px) auto auto;
+    padding-bottom: 64px;
+
+    &__img {
+        display: block;
+        height: 100%;
+    }
+
+    &__title {
+        font-weight: 800;
+        font-size: 22px;
+        line-height: 140%;
+        margin-bottom: 12px;
+    }
+
+    &__wrapper_img {
+        overflow: hidden;
+        width: 100%;
+        border-radius: 18px;
+        border: none;
+        background-color: rgba(61, 167, 180, 1);
+        margin-bottom: 16px;
+    }
+
+    &__position {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 140%;
+        color: rgba(14, 14, 44, 0.6);
+    }
+
+    @media screen and (max-width:768px) {
+        padding-bottom: 74px;
+
+        &__title {
+            font-weight: 800;
+            font-size: 20px;
+            line-height: 20px;
+        }
+
+        &__position {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 20px;
+        }
+
+
+    }
+
+}
+
+@media screen and (max-width:768px) {
+    .teamCard {
+        grid-template-columns: minmax(350px 300px)
+    }
+
+    .teamCard__wrapper_img {
+        max-width: 350px;
+        min-width: 300px;
+
+    }
+
+
 }
