--- a/src/components/Pages/About/components/Team/Team.module.scss
+++ b/src/components/Pages/About/components/Team/Team.module.scss
@@ -1,56 +1,3 @@
-/*Обнуление*/
-*{
-	padding: 0;
-	margin: 0;
-	border: 0;
-}
-*,*:before,*:after{
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-}
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
-
-nav,footer,header,aside{display: block;}
-
-html,body{
-	height: 100%;
-	width: 100%;
-	font-size: 100%;
-	line-height: 1;
-	font-size: 14px;
-	-ms-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-}
-input,button,textarea{font-family:inherit;}
-
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner {padding:0;border:0;}
-a, a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
-ul li{list-style: none;}
-img{vertical-align: top;}
-
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
-/*--------------------*/
-
-body {
-	width: 100%;
-	line-height: 1;
-    font-size: 14px;
-    font-weight: 500;
-    font-family: 'El Messiri', sans-serif;
-}
-
-
-._container {
-	margin: 0 auto;
-	max-width: 1110px;
-}
-
 .team {
 	margin-top: 200px;
 }
@@ -69,18 +16,19 @@ body {
 	font-weight: 800;
 	font-size: 24px;
 	line-height: 28px;
-	margin-bottom: 29px;
 	color: #3DA7B4;
 }
 
 .team__descr {
+    padding-top: 29px;
 	max-width: 350px;
 	font-family: 'Manrope';
 	font-style: normal;
 	font-weight: 800;
 	font-size: 32px;
 	line-height: 140%;
-	position: relative;
+    position: relative;
+    margin-right: 30px;
 }
 
 .personal__blocks {
@@ -112,4 +60,10 @@ body {
 .personal__block_descr:nth-child(2) {
 	margin-top: 12px;
 }
+
+
+
+
+
+
 
