--- a/src/components/Pages/About/components/Title/Title.module.scss
+++ b/src/components/Pages/About/components/Title/Title.module.scss
@@ -1,7 +1,5 @@
 .about {
-    width: 66px;
-    height: 34px;
-    margin: 62px 687px 24px;
+   
     
 
     font-family: 'Manrope';
@@ -9,9 +7,9 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 140%;
-    /* identical to box height, or 34px */
-    /* 2 */
+
     color: #3DA7B4;
+    margin-bottom: 24px;
 }
 
 .color {
@@ -34,11 +32,10 @@
 }
 
 .title {
-    
+    padding-top: 62px;
 
-
-    margin-left: 380px;
-    margin-right: 300px;
+    max-width: 762px;
+    margin: 0 auto;
     margin-bottom: 16px;
 
     font-family: 'Manrope';
@@ -51,4 +48,43 @@
     text-align: center;
 
     color: #0E0E2C;
+}
+
+.btn {
+    display: flex;
+    gap: 13px;
+    align-items: center;
+    justify-content: center;
+    padding: 16px 24px;
+
+
+
+background: #1DA7B4;
+border-radius: 4px;
+
+font-family: 'Manrope';
+font-style: normal;
+font-weight: 600;
+font-size: 18px;
+line-height: 140%;
+/* or 25px */
+
+
+/* Background/white */
+
+color: #FFFFFF;
+}
+.linkBtn_m {
+    display: flex;
+    align-items: center;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 140%;
+    gap: 13px;
+    padding: 8px;
+}
+.box {
+    display: flex;
+    margin-left: 447px;
+    gap: 30px;
 }
