--- a/src/components/Pages/About/components/Team/Team.module.scss
+++ b/src/components/Pages/About/components/Team/Team.module.scss
@@ -1,41 +1,4 @@
-/*Обнуление*/
-*{
-	padding: 0;
-	margin: 0;
-	border: 0;
-}
-*,*:before,*:after{
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-}
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
 
-nav,footer,header,aside{display: block;}
-
-html,body{
-	height: 100%;
-	width: 100%;
-	font-size: 100%;
-	line-height: 1;
-	font-size: 14px;
-	-ms-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-}
-input,button,textarea{font-family:inherit;}
-
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner {padding:0;border:0;}
-a, a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
-ul li{list-style: none;}
-img{vertical-align: top;}
-
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
-/*--------------------*/
 
 body {
 	width: 100%;
@@ -48,22 +11,25 @@ body {
 
 ._container {
 	margin: 0 auto;
-	max-width: 1110px;
+	max-width: 1130px;
 }
 
 .team {
+	
 	margin-top: 200px;
 }
 
 .team__body {
-	display: flex;	
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	
 }
 
-.team__title-descr {
-	margin-right: 30px;
-}
+
 
 .team__title {
+	
 	font-family: 'Manrope';
 	font-style: normal;
 	font-weight: 800;
@@ -74,6 +40,8 @@ body {
 }
 
 .team__descr {
+	padding-top: 29px;
+	margin-right: 30px;
 	max-width: 350px;
 	font-family: 'Manrope';
 	font-style: normal;
@@ -112,4 +80,7 @@ body {
 .personal__block_descr:nth-child(2) {
 	margin-top: 12px;
 }
+
+
+
 
