--- a/src/components/Pages/About/components/Reviews/Reviews.module.scss
+++ b/src/components/Pages/About/components/Reviews/Reviews.module.scss
@@ -17,6 +17,11 @@
     max-width: 1130px;
     margin: 0 auto;
     padding: 0 10px;
+    @media  screen and (max-weidth:768px) { 
+        padding: 0 16px 0;
+        margin: 0 auto;
+        
+    }
 
 }
 
@@ -37,7 +42,7 @@
     @media screen and (max-width:768px) {
         width: 62px;
         height: 22px;
-        margin-left: 16px;
+        margin:0;
 
 
         font-family: 'Manrope';
@@ -68,8 +73,7 @@
 
         text-align: left;
         min-width: 329px;
-        margin: 0 auto;
-        margin-left: 16px;
+        margin: 0 ;
         margin-bottom: 35px;
 
         font-family: 'Manrope';
