--- a/src/components/Pages/About/components/Team/Team.module.scss
+++ b/src/components/Pages/About/components/Team/Team.module.scss
@@ -79,7 +79,7 @@ body {
 	@media screen and (max-width:768px) {
 		padding-bottom: 40px;
 
-		margin: 0 auto;
+		margin: 0 ;
 		text-align: left;
 		min-width: 330px;
 		min-height: 120px;
