Review to Rus slider

--- a/src/components/Pages/About/components/Hero/Hero.module.scss
+++ b/src/components/Pages/About/components/Hero/Hero.module.scss
@@ -1,5 +1,5 @@
 .hero__container {
-    @media screen and (max-weidth:768px) {
+    @media screen and (max-width:768px) {
         padding: 0 15px 0;
         margin: 0 auto;
         
