--- a/src/components/Pages/About/components/Reviews/Reviews.module.scss
+++ b/src/components/Pages/About/components/Reviews/Reviews.module.scss
@@ -61,6 +61,18 @@
     min-height: 78px;
     margin-bottom: 38px;
 
+    @media screen and(max-width:768px) {
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 26px;
+        min-width: 329px;
+        min-height: 78px;
+        text-align: left;
+
+    }
+
 }
 
 .slide__box {
@@ -99,6 +111,15 @@
 
 
     color: rgba(14, 14, 44, 0.8);
+
+    @media screen and(max-width:768px) {
+        font-family: 'Manrope';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 22px;
+
+    }
 }
 
 .slide__img {
