--- a/src/components/Pages/About/components/Team/Team.module.scss
+++ b/src/components/Pages/About/components/Team/Team.module.scss
@@ -14,7 +14,8 @@ body {
 
 .team {
 
-    margin-top: 200px;
+    padding: 202px 0 180px;
+
 
 
 }
@@ -176,7 +177,7 @@ body {
 // GOSHA CODE
 .teamG__content {
     display: flex;
-    gap: 60px;
+    gap: 75px;
 
     @media screen and (max-width:768px) {
         flex-direction: column;
@@ -194,15 +195,16 @@ body {
     line-height: 140%;
     color: #0E0E2C;
     max-width: 350px;
+    min-width: 290px;
 
     @media screen and(max-width:768px) {
-        ont-family: 'Manrope';
+        font-family: 'Manrope';
         font-style: normal;
         font-weight: 800;
         font-size: 24px;
         line-height: 30px;
         padding-top: 16px;
-        
+
 
     }
 
@@ -212,7 +214,9 @@ body {
     max-width: 760px;
     overflow: hidden;
 
-    @media screen and (max-width:768px) {}
+    @media screen and (max-width:768px) {
+        overflow: visible;
+    }
 }
 
 .team__slider {
@@ -274,10 +278,7 @@ body {
     display: flex;
     justify-content: center;
 
-    @media screen and(max-width:768px) {
-        
-
-    }
+    @media screen and(max-width:768px) {}
 }
 
 
